apps/support/n8n/overlays/homelab/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
spec:
  template:
    spec:
      containers:
        - name: n8n
