apps/support/n8n/overlays/homelab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - n8n.support4u.se
      secretName: n8n-tls
  rules:
    - host: n8n.support4u.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 80
